force-app/main/default/objects/VendorApprovalStatusChangeEvent__e/VendorApprovalStatusChangeEvent__e.object-meta.xml
<CustomObject>
    <label>VendorApprovalStatusChangeEvent</label>
    <pluralLabel>VendorApprovalStatusChangeEvents</pluralLabel>
</CustomObject>