force-app/main/default/objects/VendorApprovalStatusChangeEvent__e/fields/ApprovalStatus_c__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus_c__c</fullName>
    <label>ApprovalStatus__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>