force-app/main/default/objects/VendorApprovalStatusChangeEvent__e/fields/VendorId_c__c.field-meta.xml
<CustomField>
    <fullName>VendorId_c__c</fullName>
    <label>VendorId__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>