force-app/main/default/objects/VendorApprovalStatusChangeEvent__e/fields/WorkOrder_c__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_c__c</fullName>
    <label>WorkOrder__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>